--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "encoding": "^0.1.13",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "lucide-react": "^0.269.0",
+    "nanoid": "^4.0.2",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
