--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@hookform/resolvers": "^3.3.1",
     "@next-auth/upstash-redis-adapter": "^3.0.4",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
     "@tailwindcss/forms": "^0.5.6",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
